--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  Shoot me an email if you have any questions or want to collaborate on a project.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
